This is the beginning of the NLP video courses

--- a/Working_with_audio.ipynb
+++ b/Working_with_audio.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSFWhoHYpWHaQny7BeRVeG",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN0OD0Y6npMx7W3N/ULQukg"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +16,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JamshidbekYusupov/Mohirdev_Tutorial_Codes/blob/main/Working_with_audio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "LASa47CisEdV"
       },
@@ -55,7 +44,7 @@
         },
         "outputId": "5895f6d6-b381-49e9-8d34-2d7dce2e2ac5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +77,7 @@
       "metadata": {
         "id": "ahn5oGPCV07z"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +88,7 @@
       "metadata": {
         "id": "N8DqG602WQA9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +103,7 @@
         "id": "c3LMrUPVWsRW",
         "outputId": "bf45bf15-9b8e-4dea-d575-a0b81de5ef6a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +130,7 @@
         "id": "W2NK1XKkWz-f",
         "outputId": "18570996-dc48-4fba-b908-bb136a9535a8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +159,7 @@
         "id": "W8TYTFh7W4ym",
         "outputId": "1145f69d-3f79-411e-c639-2ab2576c611b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -199,7 +188,7 @@
         "id": "F0DbdUoYYHQJ",
         "outputId": "8e813eb2-5f78-4f65-8964-4da3ec67fcad"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +234,7 @@
         "id": "WnwKgGuiYwtc",
         "outputId": "b6586274-4469-4f8c-dd7f-5e76cf103874"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +273,7 @@
         "id": "IjC9tbP7ZOaW",
         "outputId": "8394d11d-4ed2-47d0-8b8d-af9af9a066eb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +315,7 @@
         "id": "8icitIM-ZaHL",
         "outputId": "b82f0154-5b47-499e-f1aa-cf3ad7c22626"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,7 +361,7 @@
         "id": "kuTywmUQhusR",
         "outputId": "db043057-0911-4969-ab08-8912001306dd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +397,7 @@
         "id": "wSlvTS4elzXc",
         "outputId": "fd296abf-381f-474b-d335-6a8332f7e278"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +431,7 @@
         "id": "JZShY3GAoXFI",
         "outputId": "370a467a-0dfb-46f3-d890-ec342e92a7ba"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -477,7 +466,7 @@
         "id": "DxebX6INmOhx",
         "outputId": "060fe7ac-c0dc-47cb-ec4b-42025d8edcdd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +491,7 @@
       "metadata": {
         "id": "Q-uGVJwRmVZP"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -513,7 +502,7 @@
       "metadata": {
         "id": "IqfYSHfsnQBC"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +524,7 @@
         "id": "8IQZt03aozsU",
         "outputId": "68f5d736-c280-4b66-b6a9-b624a5ff33cc"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -566,7 +555,7 @@
       "metadata": {
         "id": "x024517OnWFc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +566,7 @@
       "metadata": {
         "id": "fhbrvRbwneX4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +582,7 @@
         "id": "fkZlFPkynucG",
         "outputId": "0f407656-3f7d-4086-b0f6-c76fec66bfa0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +613,7 @@
       "metadata": {
         "id": "vcdYT0LGn9zh"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +625,7 @@
       "metadata": {
         "id": "Y8gcOg5aq12F"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,7 +641,7 @@
         "id": "RMQeCBMTrYSl",
         "outputId": "2c606282-9233-40df-b6bd-62d3b1ed8f0d"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +672,7 @@
       "metadata": {
         "id": "u9qSS3Bernli"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,7 +684,7 @@
       "metadata": {
         "id": "BKD3YHjJtdUv"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,14 +693,14 @@
         "ipd.Audio('/content/augmenetd_audio_pitch_stretch.wav')"
       ],
       "metadata": {
+        "id": "w962c6_Pt5IF",
+        "outputId": "a1ec5bed-42e0-42b6-a063-60a9d312796b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        },
-        "id": "w962c6_Pt5IF",
-        "outputId": "a1ec5bed-42e0-42b6-a063-60a9d312796b"
+        }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,15 +721,6 @@
           "execution_count": 53
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "B0JvlRHht6Qh"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
